--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Client</artifactId>
+    <artifactId>Client</artifactId><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>14</source><target>14</target></configuration></plugin></plugins></build>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
